smartsheet/1.2/modules/ROOT/pages/smartsheet-connector-reference.adoc
= Smartsheet Connector 1.2 Reference - Mule 4

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Anypoint Connector for Smartsheet (Smartsheet Connector) enables you to interface with the Smartsheet platform without having to interact with the Smartsheet API directly.

== Configurations
---
[[Config]]
=== Config

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<Config_Oauth20, Oauth2 0 Connection Provider>>
 | The connection types to provide to this configuration. | | x
| Response Timeout a| Number |  The timeout for the request to the remote service. |  60 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  SECONDS |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  AUTO |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[Config_Oauth20]]
===== Oauth2 0 Connection Provider

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>> |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>> |  |  |
| Connection Timeout a| Number |  The timeout for establishing connections to the remote service |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Connection Timeout |  SECONDS |
| Use Persistent Connections a| Boolean |  If false, each connection will be closed after the first request is completed. |  true |
| Max Connections a| Number |  The maximum number of outbound connections to keep open at the same time |  -1 |
| Connection Idle Timeout a| Number |  A timeout for how long a connection can remain idle before it is closed |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the connection Idle Timeout |  SECONDS |
| Proxy Config a| <<Proxy>> |  Reusable configuration element for outbound connections through a proxy |  |
| Stream Response a| Boolean |
Whether or not to stream received responses, which means that processing continues as soon as all headers are parsed, and the body is streamed as it is received.
 |  false |
| Response Buffer Size a| Number |  The space, in bytes, for the buffer where the HTTP response will be stored. |  -1 |
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS |  Protocol to use for communication. Valid values are HTTP and HTTPS. |  HTTP |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Consumer Key a| String |  The OAuth consumerKey as registered with the service provider |  | x
| Consumer Secret a| String |  The OAuth consumerSecret as registered with the service provider |  | x
| Authorization Url a| String |  The service provider's authorization endpoint URL |  https://app.smartsheet.com/b/authorize |
| Access Token Url a| String |  The service provider's accessToken endpoint URL |  +https://api.smartsheet.com/2.0/token+ |
| Scopes a| String |  The OAuth scopes to be requested during the dance. If not provided, this value defaults to those in the annotation. |  ADMIN_SHEETS |
| Resource Owner Id a| String |  The resourceOwnerId that each component should use if it isn't referenced otherwise. |  |
| Before a| String |  The name of a flow to execute right before starting the OAuth dance |  |
| After a| String |  The name of a flow to execute right after an accessToken has been received |  |
| Listener Config a| String |  A reference to an <http:listener-config /> to use to create the listener that will catch the access token callback endpoint. |  | x
| Callback Path a| String |  The path of the access token callback endpoint |  | x
| Authorize Path a| String |  The path of the local HTTP endpoint that triggers the OAuth dance |  | x
| External Callback Url a| String |  If the callback endpoint is behind a proxy or should be accessed through an indirect URL, use this parameter to tell the OAuth provider the URL it should use to access the callback |  |
| Object Store a| String |  A reference to the object store that should be used to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

== Supported Operations
* <<CreateSheets>>
* <<CreateSheetsCopyBySheetId>>
* <<CreateSheetsDiscussionsCommentsBySheetIdDiscussionId>>
* <<CreateSheetsRowsAttachmentsBySheetIdRowId>>
* <<CreateSheetsRowsBySheetId>>
* <<CreateSheetsRowsCopyBySheetId>>
* <<DeleteSheetsBySheetId>>
* <<DeleteSheetsRowsBySheetId>>
* <<GetSheets>>
* <<GetSearchSheetsBySheetId>>
* <<GetSheetsBySheetId>>
* <<GetSheetsRowsBySheetIdRowId>>
* <<Unauthorize>>
* <<UpdateSheetsBySheetId>>
* <<UpdateSheetsRowsBySheetId>>

==== Associated Sources
* <<OnNewOrUpdatedRowInSheetTrigger>>


== Operations

[[CreateSheets]]
== Create Sheet
`<smartsheet:create-sheets>`


Creates a new sheet in the user's Sheets folder. This operation makes an HTTP POST request to the `/sheets` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Body a| Any |  The content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object |Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines whether to send the request using streaming. If the value is set to `AUTO`, the best strategy is automatically determined based on the content of the request. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[CreateSheetsCopyBySheetId]]
== Copy Sheet
`<smartsheet:create-sheets-copy-by-sheet-id>`


Creates a copy of the specified sheet. This operation makes an HTTP POST request to the `/sheets/{sheetId}/copy` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| include a| String |  Comma-separated list of elements to copy |  |
| exclude a| String |  Excludes the sheet's hyperlinks from the response |  |
| Body a| Any |  The content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[CreateSheetsDiscussionsCommentsBySheetIdDiscussionId]]
== Add Comment
`<smartsheet:create-sheets-discussions-comments-by-sheet-id-discussion-id>`


Adds a comment to a discussion. This operation makes an HTTP POST request to the `/sheets/{sheetId}/discussions/{discussionId}/comments` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| Discussion Id a| String |  Discussion ID |  | x
| Body a| Any |  The content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[CreateSheetsRowsAttachmentsBySheetIdRowId]]
== Add File to Row
`<smartsheet:create-sheets-rows-attachments-by-sheet-id-row-id>`


Attaches a file to the specified row. This operation makes an HTTP POST request to the `/sheets/{sheetId}/rows/{rowId}/attachments` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| Row Id a| String |  Row ID |  | x
| Content Disposition a| String |  Content disposition |  |
| Content Type a| String |  Content type |  |
| Content Length a| Number |  Content length |  |
| Body a| Binary |  The content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[CreateSheetsRowsBySheetId]]
== Add Rows
`<smartsheet:create-sheets-rows-by-sheet-id>`


Inserts one or more rows into the specified sheet. This operation makes an HTTP POST request to the `/sheets/{sheetId}/rows` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| Allow Partial Success a| Boolean |  When `true`, this field enables partial success for the Add Row operation |  false |
| Override Validation a| Boolean |  When `true`, this field allows a cell value to be outside of the validation limits. Set this value to `false` to bypass value type checking. |  false |
| Body a| Array of Any |  The content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[CreateSheetsRowsCopyBySheetId]]
== Copy Rows to Another Sheet
`<smartsheet:create-sheets-rows-copy-by-sheet-id>`


Copies rows from the specified sheet to the bottom of another sheet. This operation makes an HTTP POST request to the `/sheets/{sheetId}/rows/copy` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| include a| String |  Comma-separated list of row elements to copy. The connector copies these rows in addition to the cell data. |  |
| Ignore Rows Not Found a| Boolean |  When `true`, specifying row IDs that don't exist within the source sheet does not cause an error response. If omitted or set to `false`, specifying row IDs that don't exist within the source sheet causes an error response, and no rows are copied. |  false |
| Body a| Any |  The content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[DeleteSheetsBySheetId]]
== Delete Sheet
`<smartsheet:delete-sheets-by-sheet-id>`


Deletes the specified sheet. This operation makes an HTTP DELETE request to the `/sheets/{sheetId}` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object |Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration.  |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[DeleteSheetsRowsBySheetId]]
== Delete Rows
`<smartsheet:delete-sheets-rows-by-sheet-id>`


Deletes one or more rows from the specified sheet. This operation makes an HTTP DELETE request to the `/sheets/{sheetId}/rows` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| ids a| String |  Comma-separated list of row IDs |  | x
| Ignore Rows Not Found a| Boolean |  If `false` and any of the specified row IDs are not found, no rows are deleted. |  false |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[GetSearchSheetsBySheetId]]
== Search Sheet
`<smartsheet:get-search-sheets-by-sheet-id>`


Searches a sheet for the specified text. This operation makes an HTTP GET request to the `/search/sheets/{sheetId}` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| query a| String |  Text for which to search. Use double quotes for an exact search. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[GetSheetsBySheetId]]
== Get Sheet
`<smartsheet:get-sheets-by-sheet-id>`


Returns the specified sheet, optionally populated with discussion and attachment objects. This operation makes an HTTP GET request to the `/sheets/{sheetId}` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| include a| String |  Comma-separated list of elements to include in the response |  |
| exclude a| String |  Comma-separated list of elements to exclude from the response |  |
| Column Ids a| String |  Comma-separated list of column IDs |  |
| Filter Id a| String |  Overrides the values in the include field with the values specified here |  |
| level a| Number |  Indicates whether data with a new column type, such as MULTI_CONTACT_LIST or MULTI-PICK-LIST, is returned in a backwards-compatible text format or as a complex object. Valid values are:

* 0 - returns the data in a backwards-compatible text format
* 1 - returns multi-contact data as a complex object
* 2 - Returns multi-picklist data as a complex object |  |
| If Version After (DEPRECATED) a| Boolean | (DEPRECATED) This parameter will be removed in future releases. Use the *If Version After* field with an integer value instead. |  false |
| If Version After a| Number | Specifies the version of the sheet to return. |  |
| page a| Number |  Specifies which page number (1-based) to return. If not specified, the default value is `1`. If a page number greater than the number of total pages is specified, the last page is returned. |  |
| Page Size a| Number |  Number of rows per page to include with the sheet. If neither the page size nor page is specified, the connector returns all rows in the sheet. If only the page is specified, the connector defaults to a page size of `100`. |  |
| Row Ids a| String |  Comma-separated list of row IDs by which to filter the rows included in the result |  |
| Row Numbers a| String |  Comma-separated list of row numbers by which to filter the rows included in the result. Non-existent row numbers are ignored. |  |
| Rows Modified Since a| String |  Return only rows that have been modified since the specified date and time. Use ISO-8601 format for the date. |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[GetSheetsRowsBySheetIdRowId]]
== Get Row
`<smartsheet:get-sheets-rows-by-sheet-id-row-id>`


Returns the specified rows. This operation makes an HTTP GET request to the `/sheets/{sheetId}/rows/{rowId}` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| Row Id a| String |  Row ID |  | x
| include a| String |  Comma-separated list of elements to include in the response |  |
| exclude a| String |  Comma-separated list of elements exclude from the response |  |
| level a| Number |  Indicates whether data with a new column type, such as MULTI_CONTACT_LIST or MULTI-PICK-LIST, is returned in a backwards-compatible text format or as a complex object. Valid values are:

* 0 - returns the data in a backwards-compatible text format
* 1 - returns multi-contact data as a complex object
* 2 - Returns multi-picklist data as a complex object |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object |Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE

[[GetSheets]]
== List Sheets
`<smartsheet:get-sheets>`


Gets a list of all of the sheets the user has access to. The list contains an abbreviated Sheet object for each sheet. This operation makes an HTTP GET request to the /sheets endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| include a| String | A comma-separated list of optional elements to include in the response. |  |
| Modified Since a| String | When specified with a date and time value, the response includes only objects that are modified on or after the date and time specified. |  |
| Numeric Dates a| Boolean | Receive and send dates or times in numeric format, in milliseconds since the UNIX epoch. |  false |
| page a| Number | Page number. | 1 |
| Page Size a| Number | Page size. |  |
| Output Mime Type a| String | MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| *Type* a| Array of Any
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[Unauthorize]]
== Unauthorize
`<smartsheet:unauthorize>`


Deletes the access token information associated with a specified resource owner ID so that it's not possible to execute an operation for that user without performing the authorization dance again.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Resource Owner Id a| String |  The ID of the resource owner whose access should be invalidated |  |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
|===


=== For Configurations

* <<Config>>



[[UpdateSheetsBySheetId]]
== Update Sheet
`<smartsheet:update-sheets-by-sheet-id>`


Updates an individual user's sheet settings. If the request body contains only the userSettings attribute, this operation can be performed even if the user has only read-only access to the sheet (for example, if the user has viewer permissions or the sheet is read-only). This operation makes an HTTP PUT request to the /sheets/{sheetId} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| Body a| Any |  The content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object |Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration.  |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


[[UpdateSheetsRowsBySheetId]]
== Update Rows
`<smartsheet:update-sheets-rows-by-sheet-id>`


Updates the cell values in the specified rows. This operation makes an HTTP PUT request to the `/sheets/{sheetId}/rows` endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  Sheet ID |  | x
| Allow Partial Success a| Boolean |  When `true`, this field enables the Update Rows operation results to be partially successful |  false |
| Override Validation a| Boolean |  When `true`, this field allows a cell value to be outside the validation limits. Set this value to `false`, to bypass value type checking. |  false |
| Body a| Array of Any |  The content to use |  #[payload] |
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration.  |  |
| Response Timeout a| Number |  The timeout for the request to the remote service. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit that qualifies the Response Timeout |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming. Setting the value to AUTO automatically defines the best strategy based on the request content. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* SMARTSHEET:BAD_REQUEST
* SMARTSHEET:CLIENT_ERROR
* SMARTSHEET:CONNECTIVITY
* SMARTSHEET:INTERNAL_SERVER_ERROR
* SMARTSHEET:NOT_ACCEPTABLE
* SMARTSHEET:NOT_FOUND
* SMARTSHEET:RETRY_EXHAUSTED
* SMARTSHEET:SERVER_ERROR
* SMARTSHEET:SERVICE_UNAVAILABLE
* SMARTSHEET:TIMEOUT
* SMARTSHEET:TOO_MANY_REQUESTS
* SMARTSHEET:UNAUTHORIZED
* SMARTSHEET:UNSUPPORTED_MEDIA_TYPE


== Sources

[[OnNewOrUpdatedRowInSheetTrigger]]
== On New Or Updated Row In Sheet Trigger
`<smartsheet:on-new-or-updated-row-in-sheet-trigger>`


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Sheet Id a| String |  The unique identifier for a sheet. |  | x
| Rows Modified Since a| String |  Filter to return only rows that have been modified since the date/time provided. |  | x
| Config Ref a| ConfigurationProvider |  The name of the configuration to use to execute this component |  | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running in a cluster |  |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  A retry strategy in case of connectivity errors |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>



== Types
[[DefaultHeader]]
=== Default Header

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String |  |  | x
| Value a| String |  |  | x
|===

[[DefaultQueryParam]]
=== Default Query Param

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String |  |  | x
| Value a| String |  |  | x
|===

[[Proxy]]
=== Proxy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String |  |  | x
| Port a| Number |  |  | x
| Username a| String |  |  |
| Password a| String |  |  |
| Non Proxy Hosts a| String |  |  |
|===

[[Tls]]
=== TLS

Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol, then, at a minimum, the user must configure the keystore in the `tls:context` child element of the `listener-config`.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the truststore. |  |
| Password a| String | The password used to protect the truststore. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the truststore. |  |
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the keystore. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the keystore contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the keystore. |  |
| Algorithm a| String | The algorithm used by the keystore. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the truststore), if present. |  |
|===

[[CrlFile]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Count a| Number | How many reconnection attempts to make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[HttpResponseAttributes]]
=== Http Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number |  |  | x
| Headers a| Object |  |  | x
| Reason Phrase a| String |  |  | x
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering a process-failed-message |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | Defines which strategy is used to identify the messages. |  |
| Object Store a| ObjectStore | The object store where the redelivery counter for each message is stored. |  |
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property can be set only if useSecureHash is false. |  |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
